--- a/webapp/app/modal/modalDeleteNewsFinished.html
+++ b/webapp/app/modal/modalDeleteNewsFinished.html
@@ -4,7 +4,7 @@
       <div class="modal_x_box">
         <img onclick="modalDeleteNewsFinishedNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
-      <p id="modal_text">
+      <p class="modal_text">
         (-)
       </p>
       <div class="modal_button_box">
