--- a/webapp/app/restaurant/resModalTest.html
+++ b/webapp/app/restaurant/resModalTest.html
@@ -11,12 +11,12 @@
   <script defer src="./../../assets/js/restaurant/restaurant.js"></script>
 
   <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
-  <script src="./../../assets/js/modal/modalAdminLoginFailed.js"></script>
+  <script defer src="./../../assets/js/modal/modalAdminLoginFailed.js"></script>
 
 </head>
 <body>
   <div id="header"></div>
-  <div onclick="confirmShowup()" class="modal_confirm_showup">모달버튼</div>
+  <div onclick="modalAdminLoginFailedShow()">모달버튼</div>
   <main>
     <div class="main_body">
       <p class="page_title">
@@ -73,6 +73,6 @@
     </div>
   </main>
   <div id="footer"></div>
-  <div id="modal"></div>
+  <div id="modalAdminLoginFailed"></div>
 </body>
 </html> 
