250811 0928 황승우 링크연결

--- a/webapp/app/login/findIdResult.html
+++ b/webapp/app/login/findIdResult.html
@@ -25,8 +25,8 @@
             </div>
           </div>
           <div class="result_content_link">
-            <a href="#">비밀번호 찾기</a>
-            <a href="#">로그인하기</a>
+            <a href="./../../app/login/findPassword.html">비밀번호 찾기</a>
+            <a href="./../../app/login/findId.html">로그인하기</a>
           </div>
         </div>
       </section>
