--- a/webapp/app/login/findPasswordResult.html
+++ b/webapp/app/login/findPasswordResult.html
@@ -18,7 +18,7 @@
           <div class="result_content_box">
             <div class="content_box_title">비밀번호가 수정되었습니다.</div>
             <div class="content_box_value">
-               <a href="#">로그인하기</a>
+               <a href="./../../app/login/login.html">로그인하기</a>
             </div>
           </div>
         </div>
