--- a/webapp/app/sign/signCareSuccess.html
+++ b/webapp/app/sign/signCareSuccess.html
@@ -20,7 +20,7 @@
               돌봄 회원 등록 신청이 완료되었습니다.
             </div>
             <div class="content_box_value">
-              <a href="#">로그인하기</a>
+              <a href="./../../app/login/login.html">로그인하기</a>
             </div>
           </div>
         </div>
