--- a/webapp/app/sign/terms.html
+++ b/webapp/app/sign/terms.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/sign/terms.js"></script>
 </head>
 
 <body>
