--- a/webapp/app/login/login.html
+++ b/webapp/app/login/login.html
@@ -30,9 +30,9 @@
               <button>일반 로그인</button>
             </div>
             <div class="link_box">
-              <a href="#">아이디 찾기</a>
-              <a href="#">비밀번호 찾기</a>
-              <a href="#">회원가입</a>
+              <a href="./../../app/login/findId.html">아이디 찾기</a>
+              <a href="./../../app/login/findPassword.html">비밀번호 찾기</a>
+              <a href="./../../app/sign/terms.html">회원가입</a>
             </div>
           </div>
         </form>
