--- a/webapp/app/login/resultSign.html
+++ b/webapp/app/login/resultSign.html
@@ -28,8 +28,8 @@
             </div>
           </div>
           <div class="result_content_link">
-            <a href="#">비밀번호 찾기</a>
-            <a href="#">로그인하기</a>
+            <a href="./../../app/login/findPassword.html">비밀번호 찾기</a>
+            <a href="./../../app/login/login.html">로그인하기</a>
           </div>
         </div>
       </section>
