--- a/webapp/app/sign/signSucces.html
+++ b/webapp/app/sign/signSucces.html
@@ -20,9 +20,9 @@
               <span>OOO</span> 님 회원가입 축하드립니다.
             </div>
             <div class="content_box_value">
-              <a href="#">로그인하기</a>
+              <a href="./../../app/login/login.html">로그인하기</a>
               <div class="line"></div>
-              <a href="#">메인으로</a>
+              <a href="./../../main.html">메인으로</a>
             </div>
           </div>
         </div>
