--- a/webapp/app/myPageCare/careModify.html
+++ b/webapp/app/myPageCare/careModify.html
@@ -15,16 +15,16 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
-        <a href="./careModify.html"><li>개인정보 수정</li></a>
-        <a href="./careMark.html"><li>찜한 목록</li></a>
-        <a href="./careMatching.html"><li>매칭 기록</li></a>
-        <a href="./careMessage.html"><li>쪽지함</li></a>
-        <a href="./carePost.html"><li>게시글 관리</li></a>
-        <a href="./carePointList.html"><li>포인트 환급</li></a>
-        <a href="./careReference.html"><li>1 대 1 문의</li></a>
-        <a href="./careExit.html"><li>회원 탈퇴</li></a>
+        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
+        <li><a href="./careModify.html">개인정보 수정</a></li>
+        <li><a href="./careMark.html">찜한 목록</a></li>
+        <li><a href="./careMatching.html">매칭 기록</a></li>
+        <li><a href="./careMessage.html">쪽지함</a></li>
+        <li><a href="./carePost.html">게시글 관리</a></li>
+        <li><a href="./carePointreturn.html">포인트 환급</a></li>
+        <li><a href="./careReference.html">1 대 1 문의</a></li>
+        <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
 
