--- a/webapp/app/myPageNormal/normalMark.html
+++ b/webapp/app/myPageNormal/normalMark.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/myPageNormal/normalMark.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -15,7 +16,7 @@
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
-        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalPwCheck.html">개인정보 수정</a></li>
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
