--- a/webapp/app/myPageNormal/normalsendMesseage.html
+++ b/webapp/app/myPageNormal/normalsendMesseage.html
@@ -16,7 +16,7 @@
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
-        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalPwCheck.html">개인정보 수정</a></li>
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
@@ -158,7 +158,7 @@
         <div>받는 사람 : 홍길동 | honggildong123</div>
       </div>
       <div class="content">
-        <div ><input type="text" placeholder="쪽지 내용"></div>
+          <textarea></textarea>
       </div>
       <button id="reseiveBtn">보내기</button>
       <button id="cancleBtn">취소</button>
