--- a/webapp/app/myPageNormal/normalPwCheck.html
+++ b/webapp/app/myPageNormal/normalPwCheck.html
@@ -16,7 +16,7 @@
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
-        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalPwCheck.html">개인정보 수정</a></li>
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
@@ -29,9 +29,9 @@
     </nav>
     <div class="pw_check">
       <form action="" method="get"> 
-        비밀번호<input type="password" placeholder="비밀번호 8자리 입력">
+        비밀번호<input id="pw_input" type="password" placeholder="비밀번호 8자리 입력">
       </form>
-      <button class="checkBtn">비밀번호 확인</button>
+      <button onclick="chPw()" class="checkBtn">비밀번호 확인</button>
       <div id="pwaccord">일치하지 않는 비밀번호 입니다</div>
     </div>
   </main>
