--- a/webapp/app/myPageNormal/normalReferenceUp.html
+++ b/webapp/app/myPageNormal/normalReferenceUp.html
@@ -28,10 +28,7 @@
         <!-- 이거 어케 할지 질문 --> 
       </div>
       <div class="reference_content">
-        라이트 모드가 눈이 아픕니다 <br>
-        그러므로 다크모드 추가 요청 드립니다 <br>
-
-        아무개 올림
+        <textarea></textarea>
       </div>
       <div class="buttons">
         <a href="./normalReference.html"><button class="btn_list">목록</button></a>
