--- a/webapp/app/myPageNormal/normalreseiveMesseage.html
+++ b/webapp/app/myPageNormal/normalreseiveMesseage.html
@@ -18,7 +18,7 @@
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
-        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalPwCheck.html">개인정보 수정</a></li>
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
