--- a/webapp/app/sign/terms.html
+++ b/webapp/app/sign/terms.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <script defer src="./../../assets/js/sign/terms.js"></script>
+  <!-- <link rel="stylesheet" href=""> -->
 </head>
 
 <body>
@@ -67,7 +68,7 @@
           </p>
         </div>
         <div class="next_btn">
-          <button>다음으로</button>
+          <button onclick="goNext()">다음으로</button>
         </div>
       </form>
     </section>
