250811 1405 황승우 공지사항 삭제 모달 시작해야함

--- a/webapp/app/admin/notice.html
+++ b/webapp/app/admin/notice.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
+    <script defer src="./../../assets/js/modal/modalDeleteNotice.js"></script>
+    <script defer src="./../../assets/js/admin/notice.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
 
   <body>
@@ -55,7 +58,7 @@
                   <li class="body_cnt"><a href="">47</a></li>
                   <li class="body_date"><a href="">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
@@ -67,7 +70,7 @@
                   <li class="body_cnt"><a href="">47</a></li>
                   <li class="body_date"><a href="">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
@@ -79,7 +82,7 @@
                   <li class="body_cnt"><a href="">47</a></li>
                   <li class="body_date"><a href="">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
@@ -91,7 +94,7 @@
                   <li class="body_cnt"><a href="">47</a></li>
                   <li class="body_date"><a href="">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
@@ -103,7 +106,7 @@
                   <li class="body_cnt"><a href="">47</a></li>
                   <li class="body_date"><a href="">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
@@ -115,7 +118,7 @@
                   <li class="body_cnt"><a href="">35</a></li>
                   <li class="body_date"><a href="">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
                 <ul class="table_body">
@@ -127,7 +130,7 @@
                   <li class="body_cnt"><a href="">47</a></li>
                   <li class="body_date"><a href="">2025-08-09</a></li>
                   <li class="body_delete">
-                    <button class="delete_btn">삭제</button>
+                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
                   </li>
                 </ul>
               </div>
@@ -162,7 +165,7 @@
         </div>
       </section>
     </main>
-
     <div id="footer"></div>
+    <div id="modalDeleteNotice"></div>
   </body>
 </html>
