--- a/webapp/app/admin/noticeAdd.html
+++ b/webapp/app/admin/noticeAdd.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
     <script defer src="./../../assets/js/main/include.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
+    <script defer src="./../../assets/js/admin/noticeAdd.js"></script>
   </head>
   <body>
     <div id="header"></div>
@@ -38,8 +39,8 @@
               </div>
             </div>
             <div class="btn_area">
-              <button class="cancle_btn">취소</button>
-              <button class="add_btn">추가</button>
+              <button class="cancle_btn" type="button">취소</button>
+              <button class="add_btn" type="button">추가</button>
             </div>
           </form>
         </div>
