250811 14:05 피드백 작업중

--- a/webapp/app/myPageCare/careMatching.html
+++ b/webapp/app/myPageCare/careMatching.html
@@ -36,18 +36,18 @@
       <div class="title"> 매칭 기록 </div>
       <div class="matching_month">
         <ul class="months">
-          <li><a href="">1월</a></li>
-          <li><a href="">2월</a></li>
-          <li><a href="">3월</a></li>
-          <li><a href="">4월</a></li>
-          <li><a href="">5월</a></li>
-          <li><a href="">6월</a></li>
-          <li><a href="">7월</a></li>
-          <li><a href="">8월</a></li>
-          <li><a href="">9월</a></li>
-          <li><a href="">10월</a></li>
-          <li><a href="">11월</a></li>
-          <li><a href="">12월</a></li>
+          <li class="month">1월</li>
+          <li class="month">2월</li>
+          <li class="month">3월</li>
+          <li class="month">4월</li>
+          <li class="month">5월</li>
+          <li class="month">6월</li>
+          <li class="month">7월</li>
+          <li class="month">8월</li>
+          <li class="month">9월</li>
+          <li class="month">10월</li>
+          <li class="month">11월</li>
+          <li class="month">12월</li>
         </ul>
         <ul class="matching_list">
           <li class="matching">
