--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -173,7 +173,7 @@
       <div class="sender_info">
         <span>받는 사람 : </span>스태고사우루스 | <span class="sender_id">stago</span>
       </div>
-      <textarea class="message_textarea" placeholder="내용을 입력하세요"></textarea>
+      <textarea id="message_textarea" placeholder="내용을 입력하세요"></textarea>
     </div>
     <div class="modal_button">
       <button class="btn_send">보내기</button>
