--- a/webapp/app/myPageCare/carePostRe.html
+++ b/webapp/app/myPageCare/carePostRe.html
@@ -46,8 +46,8 @@
     <div class="modal-content">
       <p>수정이 완료되었습니다.</p>
       <div class="modal_buttons">
-        <button id="saveConfirmBtn">확인</button>
-      </div>
+        <a href="./../myPageCare/carePost.html"><button id="saveConfirmBtn">확인</button>
+      </div></a>
     </div>
   </div>
   <div id="footer"></div>
