--- a/webapp/app/myPageCare/careReferenceDP.html
+++ b/webapp/app/myPageCare/careReferenceDP.html
@@ -60,7 +60,7 @@
     <div class="modal_box">
       <p>문의가 등록 되었습니다.</p>
       <div class="modal_buttons">
-        <button id="check"> <a href=""></a>확인</button>
+        <a href="./../myPageCare/careReference.html"><button id="check"> 확인</button></a>
       </div>
     </div>
   </div>
