--- a/webapp/app/myPageCare/carePost.html
+++ b/webapp/app/myPageCare/carePost.html
@@ -52,17 +52,18 @@
           </ul>
         </nav>
         <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><a href="">
+            <ul>
+              <li><input type="checkbox"></li>
+              <li class="name"><a href="./../myPageCare/carePostDP.html">
                 <div>작성자</div>
               </a></li>
-            <li class="posttitle"><a href="">
+              <li class="posttitle"><a href="./../myPageCare/carePostDP.html">
                 <div>제목</div>
               </a></li>
-            <li class="day"><a href="">
+              <li class="day"><a href="./../myPageCare/carePostDP.html">
                 <div>날짜</div>
               </a></li>
+          
           </ul>
         </nav>
         <nav class="mark_list">
@@ -131,7 +132,7 @@
           </ul>
         </nav>
         <div class="div_delete">
-          <button>삭제</button>
+          <button class="btn_list_delete">삭제</button>
         </div>
       </div>
     </form>
@@ -143,6 +144,15 @@
       <div class="modal_buttons">
         <button id="confirmDelete">확인</button>
         <button id="cancelDelete">취소</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" id="checkModal">
+    <div class="modal_box">
+      <p>삭제할 쪽지를 선택하세요</p>
+      <div class="modal_buttons">
+        <button id="confirmDelete_check">확인</button>
       </div>
     </div>
   </div>
