--- a/webapp/app/myPageNormal/normalPoint.html
+++ b/webapp/app/myPageNormal/normalPoint.html
@@ -107,7 +107,7 @@
           </ul>
         </nav>
         <button id="deleteBtn">취소</button>
-        <button id="completeBtn">완료</button>
+        <button onclick="openpointcharge()" id="completeBtn">완료</button>
       </div>
     </div>
     <div class="modal_history">
@@ -135,8 +135,8 @@
           </div>
         </div>
 
-        <button id="deleteBtn">취소</button>
-        <button id="completeBtn">완료</button>
+        <button id="deletebutton">취소</button>
+        <button onclick="openpointhis()" id="completeBtn">완료</button>
       </div>
     </div>
   </main>
