--- a/webapp/app/myPageNormal/normalheart.html
+++ b/webapp/app/myPageNormal/normalheart.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/myPageNormal/normalheart.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -29,6 +30,15 @@
     <form action="" method="get">
       <div class="div_mark">
         <div class="title">찜한 목록</div>
+      </div>
+      <div class="context">
+        <div class="card_row">
+          <ul id="card_list_1">
+          </ul>
+        </div>
+        <div id="pagenation">
+          페이지네이션
+        </div>
       </div>
     </form>
 
