--- a/webapp/app/myPageNormal/normalPost.html
+++ b/webapp/app/myPageNormal/normalPost.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/myPageNormal/normalPost.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -54,7 +55,7 @@
             <li class="name">
               <div>작성자</div>
             </li>
-            <li class="posttitle"><a href="./../post/postDetail.html">
+            <li class="posttitle"><a href="./../post/postDetaillogin.html">
               <div>제목</div>
               </a></li>
             <li class="day">
@@ -68,7 +69,7 @@
             <li class="name">
               <div>작성자</div>
             </li>
-            <li class="posttitle"><a href="./../post/postDetail.html">
+            <li class="posttitle"><a href="./../post/postDetaillogin.html">
                 <div>제목</div>
               </a></li>
             <li class="day">
@@ -82,7 +83,7 @@
             <li class="name">
               <div>작성자</div>
             </li>
-            <li class="posttitle"><a href="./../post/postDetail.html">
+            <li class="posttitle"><a href="./../post/postDetaillogin.html">
                 <div>제목</div>
               </a></li>
             <li class="day">
@@ -96,7 +97,7 @@
             <li class="name">
               <div>작성자</div>
             </li>
-            <li class="posttitle"><a href="./../post/postDetail.html">
+            <li class="posttitle"><a href="./../post/postDetaillogin.html">
                 <div>제목</div>
               </a></li>
             <li class="day">
