--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -60,7 +60,7 @@
             </div>
           </div>
         </div>
-        <button id="next">다음</button>
+        <button onclick="openquitmodal()" id="next">다음</button>
       </form>
     </div>
   </main>
@@ -69,8 +69,8 @@
       <p>정말로 회원 탈퇴를 진행하시겠습니까?</p>
       <p>※미사용 포인트는 소멸됩니다</p>
       <div class="modal_buttons">
-        <button id="check">확인</button>
-        <button id="cancle">취소</button>
+        <button onclick="checkmodal()" id="check">확인</button>
+        <button onclick="canclemodal()"id="cancle">취소</button>
       </div>
     </div>
   </div>
