250811 18:15 장성주 마이페이지 돌봄  진행중

--- a/webapp/app/myPageCare/careMark.html
+++ b/webapp/app/myPageCare/careMark.html
@@ -53,13 +53,13 @@
             <ul>
               <li><input type="checkbox"></li>
               <li class="name">
-                <div>이름</div>
+                <div>자담치킨</div>
               </li>
               <li class="location">
-                <div>위치</div>
+                <div>서울시 강남구</div>
               </li>
               <li class="phone">
-                <div>전화번호</div>
+                <div>02)1234-5678</div>
               </li>
             </ul>
 
