--- a/webapp/app/myPageCare/carePost.html
+++ b/webapp/app/myPageCare/carePost.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
 
-    <form action="" method="get">
+
       <div class="div_mark">
         <div class="title">게시글 관리</div>
         <nav class="div_choose">
@@ -55,13 +55,13 @@
             <ul>
               <li><input type="checkbox"></li>
               <li class="name"><a href="./../myPageCare/carePostDP.html">
-                <div>작성자</div>
+                <div>아무개</div>
               </a></li>
               <li class="posttitle"><a href="./../myPageCare/carePostDP.html">
-                <div>제목</div>
+                <div>안녕하세요</div>
               </a></li>
               <li class="day"><a href="./../myPageCare/carePostDP.html">
-                <div>날짜</div>
+                <div>2025-08-11</div>
               </a></li>
           
           </ul>
@@ -135,7 +135,6 @@
           <button class="btn_list_delete">삭제</button>
         </div>
       </div>
-    </form>
 
   </main>
   <div class="modal" id="deleteModal">
