--- a/webapp/app/myPageCare/careReference.html
+++ b/webapp/app/myPageCare/careReference.html
@@ -37,14 +37,34 @@
 
       </nav>
       <nav class="mark_nav">
-        <input type="checkbox">
         <ul>
-
-          <li>작성자</li>
-          <li>제목</li>
-          <li>날짜</li>
-        </ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>작성자</div>
+            </li>
+            <li class="posttitle">
+              <div>제목</div>
+            </li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
+          </ul>
       </nav>
+      <nav class="mark_list">
+            <ul>
+              <li><input type="checkbox"></li>
+              <li class="name"><a href="./../myPageCare/careReferenceCheck.html">
+                <div>아무개</div>
+              </a></li>
+              <li class="posttitle"><a href="./../myPageCare/careReferenceCheck.html">
+                <div>안녕하세요</div>
+              </a></li>
+              <li class="day"><a href="./../myPageCare/careReferenceCheck.html">
+                <div>2025-08-11</div>
+              </a></li>
+          
+          </ul>
+        </nav>
       <nav class="page">
         <ul>
           <li>&lt;</li>
