--- a/webapp/app/myPageCare/carePost.html
+++ b/webapp/app/myPageCare/carePost.html
@@ -30,132 +30,140 @@
     </nav>
 
 
-      <div class="div_mark">
-        <div class="title">게시글 관리</div>
-        <nav class="div_choose">
-          <ul>
-            <li>작성한 게시글 목록</li>
-          </ul>
-        </nav>
-        <nav class="mark_nav">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>작성자</div>
-            </li>
-            <li class="posttitle">
-              <div>제목</div>
-            </li>
-            <li class="day">
-              <div>날짜</div>
-            </li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-            <ul>
-              <li><input type="checkbox"></li>
-              <li class="name"><a href="./../myPageCare/carePostDP.html">
-                <div>아무개</div>
-              </a></li>
-              <li class="posttitle"><a href="./../myPageCare/carePostDP.html">
-                <div>안녕하세요</div>
-              </a></li>
-              <li class="day"><a href="./../myPageCare/carePostDP.html">
-                <div>2025-08-11</div>
-              </a></li>
-          
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-          </ul>
-        </nav>
+    <div class="div_mark">
+      <div class="title">게시글 관리</div>
+      <nav class="div_choose">
+        <ul>
+          <li>작성한 게시글 목록</li>
+        </ul>
+      </nav>
+      <nav class="mark_nav">
+        <ul>
+          <li><input type="checkbox"></li>
+          <li class="name">
+            <div>작성자</div>
+          </li>
+          <li class="posttitle">
+            <div>제목</div>
+          </li>
+          <li class="day">
+            <div>날짜</div>
+          </li>
+        </ul>
+      </nav>
+      <nav class="mark_list">
+        <ul>
+          <li><input type="checkbox"></li>
+          <li class="name"><a href="./../myPageCare/carePostDP.html">
+              <div>아무개</div>
+            </a></li>
+          <li class="posttitle"><a href="./../myPageCare/carePostDP.html">
+              <div>안녕하세요</div>
+            </a></li>
+          <li class="day"><a href="./../myPageCare/carePostDP.html">
+              <div>2025-08-11</div>
+            </a></li>
 
-        <nav class="page">
-          <ul>
-            <a href="">
-              <li>&lt;</li>
-            </a>
-            <a href="">
-              <li>1</li>
-            </a>
-            <a href="">
-              <li>2</li>
-            </a>
-            <a href="">
-              <li>3</li>
-            </a>
-            <a href="">
-              <li>4</li>
-            </a>
-            <a href="">
-              <li>&gt;</li>
-            </a>
-          </ul>
-        </nav>
-        <div class="div_delete">
-          <button class="btn_list_delete">삭제</button>
-        </div>
+        </ul>
+      </nav>
+      <nav class="mark_list">
+        <ul>
+          <li><input type="checkbox"></li>
+          <li class="name"><a href="">
+              <div>작성자</div>
+            </a></li>
+          <li class="posttitle"><a href="">
+              <div>제목</div>
+            </a></li>
+          <li class="day"><a href="">
+              <div>날짜</div>
+            </a></li>
+        </ul>
+      </nav>
+      <nav class="mark_list">
+        <ul>
+          <li><input type="checkbox"></li>
+          <li class="name"><a href="">
+              <div>작성자</div>
+            </a></li>
+          <li class="posttitle"><a href="">
+              <div>제목</div>
+            </a></li>
+          <li class="day"><a href="">
+              <div>날짜</div>
+            </a></li>
+        </ul>
+      </nav>
+      <nav class="mark_list">
+        <ul>
+          <li><input type="checkbox"></li>
+          <li class="name"><a href="">
+              <div>작성자</div>
+            </a></li>
+          <li class="posttitle"><a href="">
+              <div>제목</div>
+            </a></li>
+          <li class="day"><a href="">
+              <div>날짜</div>
+            </a></li>
+        </ul>
+      </nav>
+
+      <nav class="page">
+        <ul>
+          <a href="">
+            <li>&lt;</li>
+          </a>
+          <a href="">
+            <li>1</li>
+          </a>
+          <a href="">
+            <li>2</li>
+          </a>
+          <a href="">
+            <li>3</li>
+          </a>
+          <a href="">
+            <li>4</li>
+          </a>
+          <a href="">
+            <li>&gt;</li>
+          </a>
+        </ul>
+      </nav>
+      <div class="div_delete">
+        <button class="btn_list_delete">삭제</button>
       </div>
+    </div>
 
   </main>
-  <div class="modal" id="deleteModal">
-    <div class="modal_box">
-      <p>정말로 게시글을 삭제하시겠습니까?</p>
-      <div class="modal_buttons">
-        <button id="confirmDelete">확인</button>
-        <button id="cancelDelete">취소</button>
+  <div class="modal_bg" id="deleteMsgModal">
+    <div class="modal_box confirm_modal">
+      <p class="confirm_text">정말로 게시글을 삭제하시겠습니까?</p>
+      <div class="confirm_buttons">
+        <button class="btn_confirm" onclick="confirmDelete()">확인</button>
+        <button class="btn_cancel" onclick="closeDeleteModal()">취소</button>
       </div>
     </div>
-  </div>
 
-  <div class="modal" id="checkModal">
-    <div class="modal_box">
-      <p>삭제할 쪽지를 선택하세요</p>
-      <div class="modal_buttons">
-        <button id="confirmDelete_check">확인</button>
+    <div class="modal_bg" id="sendSuccessModal">
+      <div class="modal_box modal_send">
+        <p class="send_message">쪽지가 삭제되었습니다.</p>
+        <div class="modal_button">
+          <button class="btn_confirm" onclick="closeSendModal()">확인</button>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="footer"></div>
+    
+    <div class="modal" id="checkModal">
+      <div class="modal_box">
+        <p>삭제할 쪽지를 선택하세요</p>
+        <div class="modal_buttons">
+          <button id="confirmDelete_check">확인</button>
+        </div>
+      </div>
+    </div>
+    <div id="footer"></div>
 </body>
 
 </html>
